--- a/styles/larger.css
+++ b/styles/larger.css
@@ -24,7 +24,7 @@
         top: 30px;
         left: 30px;
         background: radial-gradient(#fffffff9, #212d64e5);
-        border: 1px solid rgba(0,0,0,.75);
+        border: 1px solid rgba(255, 255, 255, 0.75);
         padding: 1.5rem;
         box-shadow: 0 0 3rem #fff;
         opacity: 0.75;
